# RenderingWorkShop

./: .gitignore  CMakeLists.txt  vcpkg.json
Day1/: CMakeLists.txt  README.md
Day1/src/: Body.h  Camera.cpp  Camera.h  Color.cpp  Film.h  Material.h  Renderer.cpp  Renderer.h  Sphere.cpp  Sphere.h  main.cpp
Day2/: CMakeLists.txt
Day2/src/: Body.h  Box.cpp  Box.h  Camera.cpp  Color.h  Film.h  Image.cpp  Image.h  Material.h  Ray.h  Renderer.cpp  Renderer.h  Sphere.cpp  Triangle.cpp  Triangle.h  main.cpp
